# Horizon-Builder

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature-request.md  config.yml  isse_template.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: check.yml  main.yml  master.yml  on-release-main.yml  on-release-master.yml  release.yml  security.yml  validate-codecov-config.yml
docs/: Horizon-Builder-Requirements.md  index.md  modules.md
gustav_engine/: main.py  parser.py  server.py
gustav_engine/content/: test.xml
src/: config.yml  data.py  macos.spec  main.py  models.py  parser.py  requirements.txt  server.py  windows.spec
src/Horizon_Builder/: config.yml  data.py  main.py  models.py  parser.py  server.py
src/Horizon_Builder/endpoints/: data.py  index.py
src/Horizon_Builder/endpoints/data_endpoints/: image_handler.py
src/Horizon_Builder/interface/: terminal.py
src/Horizon_Builder/resources/: style.scss
src/Horizon_Builder/websockets/: session.py
src/content/: temp.xml
src/endpoints/: __init__.py  endpoint_api.py  endpoint_index.py
src/endpoints/api_actions/: action_ping.py
src/horizon_builder/: __init__.py  __main__.py  config.yml
src/horizon_builder/cli/: __init__.py  context.py  interface.py
src/horizon_builder/cli/tui/: __init__.py  app.py
src/horizon_builder/data/: __init__.py  config.py  parser.py
src/horizon_builder/data/content/: models.py  parser.py  serial.py
src/horizon_builder/data/manager/: __init__.py  check.py  models.py
src/horizon_builder/plugins/: __init__.py
src/websockets/: session.py
tests/: test_foo.py  test_main.py
