[tool.poetry]
name = "Horizon Builder"
version = "v0.0.1"
description = "A 5e Character builder inspired by Aurora Builder."
authors = ["GustavoSchip <gustavoschip@proton.me>"]
repository = "https://github.com/Horizon-Builder/Horizon-Builder"
documentation = "https://horizon-builder.github.io/Horizon-Builder/"
readme = "README.md"
package-mode = false
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.1.7"
flask-socketio = "^5.3.6"
flask = { extras = ["async"], version = "^3.0.2" }
pydantic = "^2.6.3"
pyopenssl = "^24.0.0"
PyYAML = "^6.0.1"
Werkzeug = "^3.0.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-PyYAML = "^6.0.12.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.deptry.per_rule_ignores]
DEP001 = ["main", "server", "parser", "data", "models", "plugins", "endpoints", "interfaces", "api_actions"]
DEP002 = ["pyopenssl"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # UsePEP604Annotation
    "UP007",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
