[tool.poetry]
name = "Horizon Builder"
version = "v0.0.1"
description = "A 5e Character builder inspired by Aurora Builder."
authors = ["GustavoSchip <gustavoschip@proton.me>"]
repository = "https://github.com/Horizon-Builder/Horizon-Builder"
documentation = "https://horizon-builder.github.io/Horizon-Builder/"
readme = "README.md"
license = "LICENSE"
packages = [
    { include = "Horizon_Builder", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.7"
flask-socketio = "^5.3.6"
flask = { extras = ["async"], version = "^3.0.2" }
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"
trogon = "^0.5.0"
rich = "^13.7.1"
textual = "^0.52.1"
pyopenssl = "^24.1.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
deptry = "^0.12.0"
black = "^24.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-PyYAML = "^6.0.12.12"
pyinstaller = "^6.5.0"
textual-dev = "^1.5.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src/Horizon_Builder"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src/Horizon_Builder"]

[tool.deptry.per_rule_ignores]
DEP001 = ["main", "server", "parser", "data", "models", "plugins", "websockets", "endpoints", "interfaces"]
DEP002 = ["pyopenssl", "gevent", "gevent-websocket"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # UsePEP604Annotation
    "UP007",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/Horizon_Builder"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
